[package]
name = "chaosregenflow"
version = "1.0.0"
edition = "2021"
description = "ChaosRegenFlow (CRF) - Automated, GPU-Accelerated File Transfer with Chaotic Regeneration"
license = "MIT"
repository = "https://github.com/yourusername/chaosregenflow"

[dependencies]
ssh2 = "0.9"
zstd = "0.13"
xxhash-rust = "0.8"
rand = "0.8"
cuda = "0.1"
tokio = { version = "1.0", features = ["full"] }
